# Do

./: CMakeLists.txt  README.md
.github/workflows/: main.yml  todo_bot.yml
core/: CMakeLists.txt  main.c  main.cpp  prefix.h
core/parser/: do_cmd_parser.c  do_cmd_parser.h  do_parser.c  do_parser.h  prefix_parser.h
core/plugin_loader/: do_plugin_loader.c  do_plugin_loader.h  plugin_loader.c  plugin_loader.cpp  plugin_loader.h  prefix_plugin_loader.h
examples/: Basic.do
scripts/: build.py  build_and_run.py  create_plugin.py
test_plugin/: CMakeLists.txt
test_plugin/src/: test_plugin_init.c
